<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chips_today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipYesterday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDayBeforeYesterday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_before_yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEarthToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_earth_today" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipMarsToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_mars_today" />
    </com.google.android.material.chip.ChipGroup>


    <me.proton.jobforandroid.nasaapimaterial.utils.CustomImageView
        android:id="@+id/customImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/ic_no_photo_vector" />

    <TextView
        android:id="@+id/videoOfTheDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:visibility="gone"
        />


</LinearLayout>